--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="button" type="id" />
-    <item name="tataum" type="id" />
+    <item name="calcular" type="id" />
 </resources>
