verificacao_de_checkbox

--- a/app/src/main/res/layout/activity_taxa_metabolica_basal.xml
+++ b/app/src/main/res/layout/activity_taxa_metabolica_basal.xml
@@ -39,8 +39,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:autofillHints=""
-            android:background="@color/white"
+            android:background="@drawable/imputtext"
             android:ems="10"
+            android:gravity="center"
             android:hint="@string/peso_kg"
             android:inputType="number"
             android:minHeight="48dp"
@@ -53,8 +54,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:autofillHints=""
-            android:background="@color/white"
+            android:background="@drawable/imputtext"
             android:ems="10"
+            android:gravity="center"
             android:hint="@string/idade"
             android:inputType="number"
             android:minHeight="48dp"
@@ -67,8 +69,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:autofillHints=""
-            android:background="@color/white"
+            android:background="@drawable/imputtext"
             android:ems="10"
+            android:gravity="center"
             android:hint="@string/altura_em_centimetros"
             android:inputType="number"
             android:minHeight="48dp"
