--- a/app/src/main/res/layout/activity_taxa_metabolica_basal.xml
+++ b/app/src/main/res/layout/activity_taxa_metabolica_basal.xml
@@ -177,6 +177,7 @@
         style="@style/BotaoPersonalizado"
         android:layout_width="158dp"
         android:layout_height="47dp"
+        android:elevation="10dp"
         android:layout_marginBottom="4dp"
         android:background="@drawable/background_button1"
         android:text="@string/calcular"
