--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -23,7 +23,9 @@
             android:id="@+id/peso_imc"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/imputtext"
+            android:elevation="10dp"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/peso_kg"
@@ -36,7 +38,9 @@
             android:id="@+id/altura_imc"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/imputtext"
+            android:elevation="10dp"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/altura_em_centimetros"
@@ -49,7 +53,9 @@
             android:id="@+id/imc_result"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/imputtext"
+            android:elevation="10dp"
             android:gravity="center"
             android:hint="@string/resultado"
             android:paddingTop="10dp"
@@ -64,6 +70,7 @@
         android:layout_width="154dp"
         android:layout_height="49dp"
         android:background="@drawable/background_button1"
+        android:elevation="10dp"
         android:text="@string/calcular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
